tests/fixtures/invalid/bool_bitand_dict.py
# Cannot bitwise AND Bool and Dict[str, int]
x: bool = True & {"a": 1}
